add perpetual motion simulator1_3.ttt

--- a/config/content.htm
+++ b/config/content.htm
@@ -25,7 +25,8 @@ var winkVideoData_pms = {
 <p>2.完成重複返回平台(利用反方向的Torque阻止重複滾動導致的加速，但球在平台上一直滾動不下來)</p>
 <p><a href="/downloads/perpetual motion simulator1_2.ttt">perpetual motion simulator1_2.ttt</a></p>
 <p><img alt="" height="281" src="/images/螢幕擷取畫面 2023-11-01 214343.png" width="397"/></p>
-<p></p>
+<p>3.修改漏斗圖檔(倒角)，解決球在平台不下來的問題，調整第二感測器位置，可多次運行(非永動)</p>
+<p><a href="/downloads/perpetual motion simulator1_3.ttt">perpetual motion simulator1_3.ttt</a></p>
 <p></p>
 <p></p><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
