--- a/content/PMS.html
+++ b/content/PMS.html
@@ -148,7 +148,8 @@ img.add_border {
 <p>2.完成重複返回平台(利用反方向的Torque阻止重複滾動導致的加速，但球在平台上一直滾動不下來)</p>
 <p><a href="./../downloads/perpetual motion simulator1_2.ttt">perpetual motion simulator1_2.ttt</a></p>
 <p><img alt="" height="281" src="./../images/螢幕擷取畫面 2023-11-01 214343.png" width="397"/></p>
-<p></p>
+<p>3.修改漏斗圖檔(倒角)，解決球在平台不下來的問題，調整第二感測器位置，可多次運行(非永動)</p>
+<p><a href="./../downloads/perpetual motion simulator1_3.ttt">perpetual motion simulator1_3.ttt</a></p>
 <p></p>
 <p></p><br />pms_wink << <a href='pms_wink.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
