--- a/content/s1511.html
+++ b/content/s1511.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,23 +142,30 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Wink << <a href='Wink.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS<br /><h1>pms_wink</h1>
-<p>Perpetual Motion Simulator繪製過程</p>
-<script>
-var winkVideoData_pms = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
-<source src="./../downloads/pms_wink/pms.mp4" type="video/mp4"/></video></div>
-<p></p>
-<br />Wink << <a href='Wink.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
+    <div id="tipue_search_content">PMS << <a href='PMS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>s1511</h1>
+<p><strong>如何連線s1511.cycu.org並執行動態網站?</strong></p>
+<p>1.首先要開啟cmd(小黑窗)中執行ssh cad(學號)@s1511.cycu.org</p>
+<p>  *若要用可攜中start.bat中的cmd要先將start.bat用編譯器打開並將第三行蓋掉,然後重新啟動。</p>
+<p>2.執行完會要你打密碼,密碼在學校Mail2000,10/28的一封s1511.cycu.org 帳號通知信裡。</p>
+<p>3.連線完會進到OpenSSH SSH client的黑窗,再來是要生成ssh的key,在黑框中執行ssh-keygen。</p>
+<p>4.接下來就是要用FileZilla連線s1511.cycu.org將.ssh目錄下的id_rsa.pub拉到本地的目錄中,</p>
+<p>   再用編譯器打開,並將內容送入到Github-&gt;Settings-&gt;SSH and GPG keys。</p>
+<p>5.然後下載config並用FileZilla送進.ssh目錄下</p>
+<p>6.然後在OpenSSH SSH client中執行以下三個指令:</p>
+<p>   1.git config --global user.name "Github帳號名"</p>
+<p>   2.git config --global user.email "Github信箱"</p>
+<p>   3.git config --global http.proxy http://p4.cycu.org:3128</p>
+<p>7.將遠端Github的倉儲克隆下來,有以下兩種方法:</p>
+<p>   1.http協定:git clone --recurse-submodules https://github.com/41023134/cad2023.git</p>
+<p>   2.ssh協定:git clone --recurse-submodules git@github.com:41023134/cad2023.git</p>
+<p>  *由於克隆的方式不一樣倉儲中.git中的config設定也不同,因為最後是要用ssh推送到Github,</p>
+<p>   用https克隆的要將config設定改成ssh的樣子,也就是將<span>https://github.com/41023134/cad2023.git</span></p>
+<p>   改成git@github.com:41023134/cad2023.git</p>
+<p>8.再來要下載server.py的檔案用編輯器將自己9開頭的埠號輸入並將檔案用FileZilla送到倉儲目錄下</p>
+<p>9.然後在小黑窗執行cd site-xxxxxxxx移動到倉儲目錄下執行python3 server.py(沒出現東西就算成功)</p>
+<p>10.在firefox或waterfox中執行https:s1511.cycu.org:8xxx</p>
+<p>  *若有設定proxy要關掉</p>
+<p></p><br />PMS << <a href='PMS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
