--- a/config/content.htm
+++ b/config/content.htm
@@ -3,7 +3,15 @@
 <p>倉儲:<a href="https://github.com/41023134/cad2023">41023134/cad2023</a></p>
 <p>網站:<a class="Link--inTextBlock" href="https://41023134.github.io/cad2023/">https://41023134.github.io/cad2023/</a></p>
 <p></p>
-<h1>Wink</h1>
+<h1>Replit</h1>
+<p>1.先按Create創建一個repl,然後按Import from Github導入cad2023開頭的倉儲</p>
+<p>2.導入倉儲,首先第一件要做的事是在Shell下執行git submodule update --init --recursive,</p>
+<p>目的在於取下cmsite倉儲中子模組的檔案。</p>
+<p>3.然後在Shell下執行pip install flask flask_cors bs4 lxml pelican markdown gevent,</p>
+<p>來安裝cmsimde需要的模組。</p>
+<p>4.切換到主函式main.py並按Run執行。</p>
+<p>5.若要推送到遠端Github,要用Version Control,打上標題然後按Commit All &amp;Push。</p>
+<p></p><h1>Wink</h1>
 <h2>pms_wink</h2>
 <p>Perpetual Motion Simulator繪製過程</p>
 <script>
@@ -52,7 +60,8 @@ var winkVideoData_pms = {
 <p>9.然後在小黑窗執行cd site-xxxxxxxx移動到倉儲目錄下執行python3 server.py(沒出現東西就算成功)</p>
 <p>10.在firefox或waterfox中執行https:s1511.cycu.org:8xxx</p>
 <p>  *若有設定proxy要關掉</p>
-<p></p><h1>Brython</h1>
+<p></p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
