--- a/content/PMS.html
+++ b/content/PMS.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li><a href='PMS.html'>PMS</a><li><a href='s1511.html'>s1511</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">pms_wink << <a href='pms_wink.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>PMS</h1>
+    <div id="tipue_search_content">s1511 << <a href='s1511.html'>Previous</a> <a href='Wink.html'>Next</a> >> Wink<br /><h1>PMS</h1>
 <p><span>有關磁力吸引的鋼球循環運動系統，電腦輔助設計與實習課程的任務一即可根據此一裝置的設計, 先採用電腦輔助設計軟體, 繪製系統所需的 3D 零組件, 然後轉為 STL 格式, import 進入 CoppeliaSim, 接著根據影片說明, 利用近接感測器控制電磁鐵開關, 設法透過磁力吸引讓鋼球具有足夠動能返回圓形平台.</span></p>
 <p>1.完成一次返回平台(利用接近感測器感測到時，給一個力)<a href="./../downloads/perpetual motion simulator1_1.ttt">perpetual motion simulator1_1.ttt</a></p>
 <p>2.完成重複返回平台(利用反方向的Torque阻止重複滾動導致的加速，但球在平台上一直滾動不下來)</p>
@@ -151,7 +151,7 @@ img.add_border {
 <p>3.修改漏斗圖檔(倒角)，解決球在平台不下來的問題，調整第二感測器位置，可多次運行(非永動)</p>
 <p><a href="./../downloads/perpetual motion simulator1_3.ttt">perpetual motion simulator1_3.ttt</a></p>
 <p></p>
-<br />pms_wink << <a href='pms_wink.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
+<br />s1511 << <a href='s1511.html'>Previous</a> <a href='Wink.html'>Next</a> >> Wink</div>
         
     <!-- footer -->
       <div class="container">
