--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,32 +4,13 @@
 <p>網站:<a class="Link--inTextBlock" href="https://41023134.github.io/cad2023/">https://41023134.github.io/cad2023/</a></p>
 <p></p>
 <h1>Replit</h1>
-<p></p>
-<h1>Wink</h1>
-<h2>pms_wink</h2>
-<p>Perpetual Motion Simulator繪製過程</p>
-<script>
-var winkVideoData_pms = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
-<source src="./../downloads/pms_wink/pms.mp4" type="video/mp4"/></video></div>
-<p></p>
-<h1>PMS</h1>
-<p><span>有關磁力吸引的鋼球循環運動系統，電腦輔助設計與實習課程的任務一即可根據此一裝置的設計, 先採用電腦輔助設計軟體, 繪製系統所需的 3D 零組件, 然後轉為 STL 格式, import 進入 CoppeliaSim, 接著根據影片說明, 利用近接感測器控制電磁鐵開關, 設法透過磁力吸引讓鋼球具有足夠動能返回圓形平台.</span></p>
-<p>1.完成一次返回平台(利用接近感測器感測到時，給一個力)<a href="/downloads/perpetual motion simulator1_1.ttt">perpetual motion simulator1_1.ttt</a></p>
-<p>2.完成重複返回平台(利用反方向的Torque阻止重複滾動導致的加速，但球在平台上一直滾動不下來)</p>
-<p><a href="/downloads/perpetual motion simulator1_2.ttt">perpetual motion simulator1_2.ttt</a></p>
-<p><img alt="" height="281" src="/images/螢幕擷取畫面 2023-11-01 214343.png" width="397"/></p>
-<p>3.修改漏斗圖檔(倒角)，解決球在平台不下來的問題，調整第二感測器位置，可多次運行(非永動)</p>
-<p><a href="/downloads/perpetual motion simulator1_3.ttt">perpetual motion simulator1_3.ttt</a></p>
+<p>1.先按Create創建一個repl,然後按Import from Github導入cad2023開頭的倉儲</p>
+<p>2.導入倉儲,首先第一件要做的事是在Shell下執行git submodule update --init --recursive,</p>
+<p>目的在於取下cmsite倉儲中子模組的檔案。</p>
+<p>3.然後在Shell下執行pip install flask flask_cors bs4 lxml pelican markdown gevent,</p>
+<p>來安裝cmsimde需要的模組。</p>
+<p>4.切換到主函式main.py並按Run執行。</p>
+<p>5.若要推送到遠端Github,要用Version Control,打上標題然後按Commit All &amp;Push。</p>
 <p></p>
 <h1>s1511</h1>
 <p><strong>如何連線s1511.cycu.org並執行動態網站?</strong></p>
@@ -55,7 +36,34 @@ var winkVideoData_pms = {
 <p>10.在firefox或waterfox中執行https:s1511.cycu.org:8xxx</p>
 <p>  *若有設定proxy要關掉</p>
 <p></p>
-<h1>Brython</h1>
+<h1>PMS</h1>
+<p><span>有關磁力吸引的鋼球循環運動系統，電腦輔助設計與實習課程的任務一即可根據此一裝置的設計, 先採用電腦輔助設計軟體, 繪製系統所需的 3D 零組件, 然後轉為 STL 格式, import 進入 CoppeliaSim, 接著根據影片說明, 利用近接感測器控制電磁鐵開關, 設法透過磁力吸引讓鋼球具有足夠動能返回圓形平台.</span></p>
+<p>1.完成一次返回平台(利用接近感測器感測到時，給一個力)<a href="/downloads/perpetual motion simulator1_1.ttt">perpetual motion simulator1_1.ttt</a></p>
+<p>2.完成重複返回平台(利用反方向的Torque阻止重複滾動導致的加速，但球在平台上一直滾動不下來)</p>
+<p><a href="/downloads/perpetual motion simulator1_2.ttt">perpetual motion simulator1_2.ttt</a></p>
+<p><img alt="" height="281" src="/images/螢幕擷取畫面 2023-11-01 214343.png" width="397"/></p>
+<p>3.修改漏斗圖檔(倒角)，解決球在平台不下來的問題，調整第二感測器位置，可多次運行(非永動)</p>
+<p><a href="/downloads/perpetual motion simulator1_3.ttt">perpetual motion simulator1_3.ttt</a></p>
+<p></p>
+<h1>Wink</h1>
+<h2>pms_wink</h2>
+<p>Perpetual Motion Simulator繪製過程</p>
+<script>
+var winkVideoData_pms = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
+<source src="./../downloads/pms_wink/pms.mp4" type="video/mp4"/></video></div>
+<p></p>
+<h1>OBS</h1>
+<h2>solidworks</h2><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
