--- a/content/OBS.html
+++ b/content/OBS.html
@@ -142,16 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>Replit</h1>
-<p>1.先按Create創建一個repl,然後按Import from Github導入cad2023開頭的倉儲</p>
-<p>2.導入倉儲,首先第一件要做的事是在Shell下執行git submodule update --init --recursive,</p>
-<p>目的在於取下cmsite倉儲中子模組的檔案。</p>
-<p>3.然後在Shell下執行pip install flask flask_cors bs4 lxml pelican markdown gevent,</p>
-<p>來安裝cmsimde需要的模組。</p>
-<p>4.切換到主函式main.py並按Run執行。</p>
-<p>5.若要推送到遠端Github,要用Version Control,打上標題然後按Commit All &amp;Push。</p>
-<p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
+    <div id="tipue_search_content">pms_wink << <a href='pms_wink.html'>Previous</a> <a href='solidworks.html'>Next</a> >> solidworks<br /><h1>OBS</h1>
+<br />pms_wink << <a href='pms_wink.html'>Previous</a> <a href='solidworks.html'>Next</a> >> solidworks</div>
         
     <!-- footer -->
       <div class="container">
