--- a/content/Wink.html
+++ b/content/Wink.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li><a href='PMS.html'>PMS</a><li><a href='s1511.html'>s1511</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='pms_wink.html'>Next</a> >> pms_wink<br /><h1>Wink</h1>
-<br />Replit << <a href='Replit.html'>Previous</a> <a href='pms_wink.html'>Next</a> >> pms_wink</div>
+    <div id="tipue_search_content">PMS << <a href='PMS.html'>Previous</a> <a href='pms_wink.html'>Next</a> >> pms_wink<br /><h1>Wink</h1>
+<br />PMS << <a href='PMS.html'>Previous</a> <a href='pms_wink.html'>Next</a> >> pms_wink</div>
         
     <!-- footer -->
       <div class="container">
