--- a/content/pms_wink.html
+++ b/content/pms_wink.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li><a href='PMS.html'>PMS</a><li><a href='s1511.html'>s1511</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Wink << <a href='Wink.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS<br /><h1>pms_wink</h1>
+    <div id="tipue_search_content">Wink << <a href='Wink.html'>Previous</a> <a href='OBS.html'>Next</a> >> OBS<br /><h1>pms_wink</h1>
 <p>Perpetual Motion Simulator繪製過程</p>
 <script>
 var winkVideoData_pms = {
@@ -158,7 +158,7 @@ var winkVideoData_pms = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
 <source src="./../downloads/pms_wink/pms.mp4" type="video/mp4"/></video></div>
 <p></p>
-<br />Wink << <a href='Wink.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
+<br />Wink << <a href='Wink.html'>Previous</a> <a href='OBS.html'>Next</a> >> OBS</div>
         
     <!-- footer -->
       <div class="container">
