--- a/content/s1511.html
+++ b/content/s1511.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li><a href='PMS.html'>PMS</a><li><a href='s1511.html'>s1511</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">PMS << <a href='PMS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>s1511</h1>
+    <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS<br /><h1>s1511</h1>
 <p><strong>如何連線s1511.cycu.org並執行動態網站?</strong></p>
 <p>1.首先要開啟cmd(小黑窗)中執行ssh cad(學號)@s1511.cycu.org</p>
 <p>  *若要用可攜中start.bat中的cmd要先將start.bat用編譯器打開並將第三行蓋掉,然後重新啟動。</p>
@@ -166,7 +166,7 @@ img.add_border {
 <p>10.在firefox或waterfox中執行https:s1511.cycu.org:8xxx</p>
 <p>  *若有設定proxy要關掉</p>
 <p></p>
-<br />PMS << <a href='PMS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<br />Replit << <a href='Replit.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
         
     <!-- footer -->
       <div class="container">
