--- a/content/solidworks.html
+++ b/content/solidworks.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,16 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>Replit</h1>
-<p>1.先按Create創建一個repl,然後按Import from Github導入cad2023開頭的倉儲</p>
-<p>2.導入倉儲,首先第一件要做的事是在Shell下執行git submodule update --init --recursive,</p>
-<p>目的在於取下cmsite倉儲中子模組的檔案。</p>
-<p>3.然後在Shell下執行pip install flask flask_cors bs4 lxml pelican markdown gevent,</p>
-<p>來安裝cmsimde需要的模組。</p>
-<p>4.切換到主函式main.py並按Run執行。</p>
-<p>5.若要推送到遠端Github,要用Version Control,打上標題然後按Commit All &amp;Push。</p>
+    <div id="tipue_search_content">OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>solidworks</h1>
 <p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/mwadaU5GAe0?si=JAsdB1dI2x-u8GWt" title="YouTube video player" width="560"></iframe></p><br />OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
