--- a/content/solidworks.html
+++ b/content/solidworks.html
@@ -144,7 +144,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>solidworks</h1>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/mwadaU5GAe0?si=JAsdB1dI2x-u8GWt" title="YouTube video player" width="560"></iframe></p><br />OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/mwadaU5GAe0?si=JAsdB1dI2x-u8GWt" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6n68SETLNMs?si=cBO9zdeojOqlfMTS" title="YouTube video player" width="560"></iframe></p><br />OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
