--- a/content/solidworks.html
+++ b/content/solidworks.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms_wink.html'>pms_wink</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>solidworks</h1>
+    <div id="tipue_search_content">OBS << <a href='OBS.html'>Previous</a> <a href='NOTE.html'>Next</a> >> NOTE<br /><h1>solidworks</h1>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/mwadaU5GAe0?si=JAsdB1dI2x-u8GWt" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6n68SETLNMs?si=cBO9zdeojOqlfMTS" title="YouTube video player" width="560"></iframe></p><br />OBS << <a href='OBS.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6n68SETLNMs?si=cBO9zdeojOqlfMTS" title="YouTube video player" width="560"></iframe></p>
+<br />OBS << <a href='OBS.html'>Previous</a> <a href='NOTE.html'>Next</a> >> NOTE</div>
         
     <!-- footer -->
       <div class="container">
