添加網路設定

--- a/content/pms.html
+++ b/content/pms.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,12 +142,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w12.html'>Next</a> >> w12<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite</a></p>
-<p>倉儲:<a href="https://github.com/41023134/cad2023">41023134/cad2023</a></p>
-<p>網站:<a class="Link--inTextBlock" href="https://41023134.github.io/cad2023/">https://41023134.github.io/cad2023/</a></p>
+    <div id="tipue_search_content">Wink << <a href='Wink.html'>Previous</a> <a href='OBS.html'>Next</a> >> OBS<br /><h1>pms</h1>
+<p>Perpetual Motion Simulator繪製過程</p>
+<script>
+var winkVideoData_pms = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
+<source src="./../downloads/pms_wink/pms.mp4" type="video/mp4"/></video></div>
 <p></p>
-<br /> <a href='w12.html'>Next</a> >> w12</div>
+<br />Wink << <a href='Wink.html'>Previous</a> <a href='OBS.html'>Next</a> >> OBS</div>
         
     <!-- footer -->
       <div class="container">
