--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,7 +4,7 @@
 <p>網站:<a class="Link--inTextBlock" href="https://41023134.github.io/cad2023/">https://41023134.github.io/cad2023/</a></p>
 <p></p>
 <h1>w12</h1>
-<p>用python程式讀取<a href="/downloads/2a_w12_seat.txt">2a_w12_seat.txt</a>排出座位表(w12.py)：</p>
+<p>用python程式讀取<a href="/downloads/2a_w12_seat.txt">2a_w12_seat.txt</a>排出座位表(<a href="/downloads/w12.py">w12.py</a>)：</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">file_path = "2a_w12_seat.txt"
 
 with open(file_path, "r", encoding="utf-8") as file:
