--- a/content/Replit.html
+++ b/content/Replit.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定-1.html'>網路設定-1</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='網路設定-2.html'>網路設定-2</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">s1511 << <a href='s1511.html'>Previous</a> <a href='網路設定-2.html'>Next</a> >> 網路設定-2<br /><h1>Replit</h1>
+    <div id="tipue_search_content">s1511 << <a href='s1511.html'>Previous</a> <a href='Internet Set.html'>Next</a> >> Internet Set<br /><h1>Replit</h1>
 <p>1.先按Create創建一個repl,然後按Import from Github導入cad2023開頭的倉儲</p>
 <p>2.導入倉儲,首先第一件要做的事是在Shell下執行git submodule update --init --recursive,</p>
 <p>目的在於取下cmsite倉儲中子模組的檔案。</p>
@@ -150,7 +150,7 @@ img.add_border {
 <p>來安裝cmsimde需要的模組。</p>
 <p>4.切換到主函式main.py並按Run執行。</p>
 <p>5.若要推送到遠端Github,要用Version Control,打上標題然後按Commit All &amp;Push。</p>
-<br />s1511 << <a href='s1511.html'>Previous</a> <a href='網路設定-2.html'>Next</a> >> 網路設定-2</div>
+<br />s1511 << <a href='s1511.html'>Previous</a> <a href='Internet Set.html'>Next</a> >> Internet Set</div>
         
     <!-- footer -->
       <div class="container">
