--- a/content/網路設定.html
+++ b/content/網路設定.html
@@ -155,7 +155,7 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12internet_set/w12internet_set.mp4"/></video></div>
+<source src="./../downloads/w13/w13.mp4"/></video></div>
 <p></p><br />w12 << <a href='w12.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
         
     <!-- footer -->
