--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,7 +4,22 @@
 <p>網站:<a class="Link--inTextBlock" href="https://41023134.github.io/cad2023/">https://41023134.github.io/cad2023/</a></p>
 <p></p>
 <h1>exam</h1>
-<h2>wink</h2><h1>w12</h1>
+<h2>wink</h2>
+<p>w15_wink</p>
+<script>
+var winkVideoData_pms = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
+<source src="./../downloads/w15/w15_wink/w15.mp4" type="video/mp4"/></video></div>
+<p></p><h1>w12</h1>
 <p>用python程式讀取<a href="/downloads/2a_w12_seat.txt">2a_w12_seat.txt</a>排出座位表(<a href="/downloads/w12.py">w12.py</a>)：</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">file_path = "2a_w12_seat.txt"
 
