--- a/config/content.htm
+++ b/config/content.htm
@@ -19,7 +19,8 @@ var winkVideoData_pms = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
 <source src="./../downloads/w15/w15_wink/w15.mp4" type="video/mp4"/></video></div>
-<p></p><h1>w12</h1>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pAG0eWzy49Y?si=0GnLrrTVezc6opxc" title="YouTube video player" width="560"></iframe></p><h1>w12</h1>
 <p>用python程式讀取<a href="/downloads/2a_w12_seat.txt">2a_w12_seat.txt</a>排出座位表(<a href="/downloads/w12.py">w12.py</a>)：</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">file_path = "2a_w12_seat.txt"
 
